feat: base da Minimal API pronta para entrega do desafio DIO

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,13 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Jwt": {
+    "Key": "MinhaChaveSecretaSuperSegura123!"
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySql": "Server=localhost;Database=minimal_api;Uid=root;Pwd=root;"
-  },
-  "Jwt": "minimal-api-alunos-vamos_lá"
+    "MySql": "server=localhost;database=minimalapi;user=root;password=senha;"
+  }
 }
+
